Fixed bounding boxes being removed improperly when branches fail to generate, and improved the way we handle when things go wrong with more try/catching
Signed-off-by: Skylor Beck <42103122+skylorbeck@users.noreply.github.com>